terraform/aws/projects/eks-deployments/yamls/network-policy/nginx/ingress-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress-deny-all
  namespace: nginx-ns
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  # An empty ingress list denies all ingress traffic
  ingress: null
